Update stage0.groovy